<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Twitter Client</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_photos">Flickr Photos</string>
    <string name="login_label">Log in</string>
    <string name="title_activity_home">Tweets</string>
    <string name="tweet_label">Tweet</string>
    <string name="username_label">Name</string>
    <string name="screen_name_label">SName</string>
    <string name="created_at_label">Time</string>
    <string name="title_activity_compose">Compose Tweet</string>
    <string name="tweet_compose_label">Whats Happening?</string>
    <string name="action_tweet">TWEET</string>
    <string name="action_compose">COMPOSE</string>
    <string name="title_activity_profile">Profile</string>
    <string name="desc_label">Description</string>
    <string name="name_label">Name</string>
    <string name="followers_label">Followers</string>
    <string name="following_label">Following</string>
    <string name="action_profile">PROFILE</string>

</resources>