<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.codepath.apps.restclienttemplate.ProfileActivity" >

    <ImageView
        android:id="@+id/ivProfilePic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ivProfilePic"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/ivProfilePic"
        android:text="@string/name_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvName"
        android:layout_below="@+id/tvName"
        android:ellipsize="end"
        android:maxLines="3"
        android:minLines="2"
        android:text="@string/desc_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <FrameLayout
        android:id="@+id/tweets_placeholder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tvFollowers" >

	</FrameLayout>

    <TextView
        android:id="@+id/tvFollowers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ivProfilePic"
        android:layout_below="@+id/tvDescription"
        android:text="@string/followers_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvFollowing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDescription"
        android:layout_toRightOf="@+id/tvFollowers"
        android:layout_marginLeft="20dp"
        android:text="@string/following_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
